syntax = "proto3";

package account.events;
option java_multiple_files = true;

message AccountCreatedEvent{
  string userId = 1;
  string email = 2;
  int64 accountNumber = 3;
}

message AccountStatusUpdatedEvent{
  string userId = 1;
  string email = 2;
  int64 accountNumber = 3;
  string status = 4;
  double balance = 5;
}

message KycCompletedEvent{
  string userId = 1;
  string email = 2;
  int64 accountNumber = 3;
}