syntax = "proto3";

package auth.events;
option java_multiple_files = true;

message UserCreatedEvent{
  string userId = 1;
  string email = 2;
}